[gd_scene load_steps=13 format=2]

[ext_resource path="res://m5x7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/main_menu.gd" type="Script" id=2]
[ext_resource path="res://sprites/select_triangle.png" type="Texture" id=3]
[ext_resource path="res://sprites/check_box.png" type="Texture" id=4]
[ext_resource path="res://sfx/Menu_Select.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
font_data = ExtResource( 1 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=5]
outline_size = 1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
outline_size = 1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
outline_size = 1
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 160.0
margin_bottom = 144.0
color = Color( 0.2, 0.2, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 40.0
margin_top = 28.5
margin_right = 80.0
margin_bottom = 75.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MainMenu/VBoxContainer"]
margin_right = 42.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.827451, 0.870588, 0.196078, 1 )
custom_colors/font_outline_modulate = Color( 0, 0.415686, 0.443137, 1 )
text = "Start"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="MainMenu/VBoxContainer"]
margin_top = 17.0
margin_right = 42.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 20, 7 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.827451, 0.870588, 0.196078, 1 )
custom_colors/font_outline_modulate = Color( 0, 0.415686, 0.443137, 1 )
text = "Options"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="MainMenu/VBoxContainer"]
margin_top = 34.0
margin_right = 42.0
margin_bottom = 47.0
rect_pivot_offset = Vector2( 20, 7 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.827451, 0.870588, 0.196078, 1 )
custom_colors/font_outline_modulate = Color( 0, 0.415686, 0.443137, 1 )
text = "Exit"
align = 1
uppercase = true

[node name="SelectButton" type="TextureRect" parent="MainMenu"]
margin_left = 40.0
margin_top = 49.0
margin_right = 56.0
margin_bottom = 65.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsMenu" type="Control" parent="."]
margin_right = 160.0
margin_bottom = 144.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectButton2" type="TextureRect" parent="OptionsMenu"]
margin_left = 28.0
margin_top = 48.0
margin_right = 44.0
margin_bottom = 64.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="OptionsMenu"]
position = Vector2( 115.733, 55.5208 )
frames = SubResource( 4 )
frame = 1

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -44.5
margin_top = -24.0
margin_right = 44.5
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsMenu/VBoxContainer"]
margin_right = 89.0
margin_bottom = 13.0
alignment = 1

[node name="Label" type="Label" parent="OptionsMenu/VBoxContainer/HBoxContainer"]
margin_left = 14.0
margin_right = 74.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.827451, 0.870588, 0.196078, 1 )
custom_colors/font_outline_modulate = Color( 0, 0.415686, 0.443137, 1 )
text = "Fullscreen"
uppercase = true

[node name="HBoxContainer2" type="HBoxContainer" parent="OptionsMenu/VBoxContainer"]
margin_top = 17.0
margin_right = 89.0
margin_bottom = 30.0
alignment = 1

[node name="Label2" type="Label" parent="OptionsMenu/VBoxContainer/HBoxContainer2"]
margin_left = 11.0
margin_right = 49.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.827451, 0.870588, 0.196078, 1 )
custom_colors/font_outline_modulate = Color( 0, 0.415686, 0.443137, 1 )
text = "Volume"
align = 1
uppercase = true

[node name="Label3" type="Label" parent="OptionsMenu/VBoxContainer/HBoxContainer2"]
margin_left = 53.0
margin_right = 77.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.827451, 0.870588, 0.196078, 1 )
custom_colors/font_outline_modulate = Color( 0, 0.415686, 0.443137, 1 )
text = "100%"
align = 1
uppercase = true

[node name="Label" type="Label" parent="OptionsMenu/VBoxContainer"]
margin_top = 34.0
margin_right = 89.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.827451, 0.870588, 0.196078, 1 )
custom_colors/font_outline_modulate = Color( 0, 0.415686, 0.443137, 1 )
text = "Back"
align = 1
uppercase = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
